force-app/main/default/objects/ULBC_Stripe_Settings__c/ULBC_Stripe_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Org-wide settings for Stripe integration. Hierarchy type allows org-default value with optional per-user/profile overrides if needed in future.</description>
    <label>ULBC Stripe Settings</label>
</CustomObject>