force-app/main/default/objects/ULBC_Stripe_Settings__c/fields/DonationBaseURL__c.field-meta.xml
<CustomField>
    <fullName>DonationBaseURL__c</fullName>
    <description>Base URL of the Salesforce-hosted donate page. Used by ULBC_Donation_Link__c formula on Contact. Set to placeholder until Salesforce Site is created in Phase 5A.4. Example value (post-Site setup): https://ulbctrust-developer-edition.my.site.com/donate</description>
    <label>Donation Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>