force-app/main/default/objects/ULBC_Stripe_Settings__c/fields/EventsBaseURL__c.field-meta.xml
<CustomField>
    <fullName>EventsBaseURL__c</fullName>
    <description>Base URL of the Salesforce-hosted event registration page. Used by ULBC_StripeCheckoutController to build success/cancel URLs for Stripe Checkout. Example value (post-Site setup): https://ulbctrustlimited.my.site.com/events</description>
    <label>Events Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>