force-app/main/default/objects/ULBC_Stripe_Settings__c/fields/WebhookSigningSecret__c.field-meta.xml
<CustomField>
    <fullName>WebhookSigningSecret__c</fullName>
    <description>Stripe webhook endpoint signing secret (whsec_...). Used by ULBC_StripeWebhook to verify the Stripe-Signature header on every incoming payload. Test mode and live mode use different secrets — swap this value when flipping to production (OQ-029). Set via Setup → Custom Settings → ULBC Stripe Settings → Manage. Hierarchy custom setting reads bypass FLS, so this field does not appear on any permission set; only Setup access (Customize Application) gates write access.</description>
    <label>Webhook Signing Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>